--- a/style.css
+++ b/style.css
@@ -6,15 +6,11 @@
 body {
     font-family: 'Ubuntu', sans-serif;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #333;
-    color: #222;
     overflow: hidden;
     margin: 0;
-    
     /* background-image: url('bg.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -22,15 +18,16 @@ body {
 }
 
 .bg {
-    background: url('images/bg.jpg') no-repeat center center/cover;
+    background: url('images/2.jpg')
+      no-repeat center center/cover;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    top: -30px;
+    left: -30px;
+    width: calc(100vw + 60px);
+    height: calc(100vh + 60px);
     z-index: -1;
     filter: blur(0px);
-}
+  }
 .loading-text {
     font-size: 50px;
     color: white;
